--- a/k8s-manifests/auth-deployment.yaml
+++ b/k8s-manifests/auth-deployment.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: devops
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-deployment
+  namespace: devops
 spec:
   replicas: 2
   selector:
@@ -22,12 +28,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-service
+  namespace: auth-namespace
 spec:
-  type: LoadBalancer   # <-- important for EKS
+  type: LoadBalancer
   selector:
     app: auth
   ports:
     - protocol: TCP
       port: 80
       targetPort: 5000
-
